# symbolic-regression-utilities

./: README.md  dimensional_analysis.py  parsing.py  setup.cfg  setup.py  test.py
code/: regression.py
datasets/AllenDynes/: SISSO.in  data.csv
datasets/AllenDynes/feature_space/: Uspace.name
datasets/AllenDynes/models/: top9999_001d  top9999_001d_coeff
datasets/octahedral_tilting/oversampled/fold0/: SISSO.in  SISSO.out
datasets/octahedral_tilting/oversampled/fold1/: SISSO.out
datasets/octahedral_tilting/oversampled/fold2/: SISSO.out
datasets/octahedral_tilting/oversampled/fold3/: SISSO.out
datasets/octahedral_tilting/oversampled/fold4/: SISSO.out
datasets/octahedral_tilting/oversampled/fold_0/: SISSO.in  SISSO.out
datasets/octahedral_tilting/oversampled/fold_1/: SISSO.out
datasets/octahedral_tilting/oversampled/fold_2/: SISSO.out
datasets/octahedral_tilting/oversampled/fold_3/: SISSO.out
datasets/octahedral_tilting/oversampled/fold_4/: SISSO.out
datasets/octahedral_tilting/oversampled/fold_5/: SISSO.in  SISSO.out
datasets/octahedral_tilting/unweighted/fold0/: SISSO.out
datasets/octahedral_tilting/unweighted/fold1/: SISSO.in  SISSO.out
examples/: data_AD.txt  demo_inputs.ipynb  demo_outputs.ipynb
examples/demo/: SISSO.in  SISSO.out
examples/demo/feature_space/: Uspace.name
examples/demo/models/: top001000_001d  top001000_001d_coeff
src/: regression.py
src/sissotools/: constraints.py  dimensional_analysis.py  io.py  oversampling.py  plotting.py  regression.py
tests/: test_general.py
(+58 files in other folders)
