[metadata]
# replace with your username:
name = sissotools
version = 0.0.1
author = Stephen Raymond Xie
author_email = sxiexie@ufl.edu
description = A small package for working with SISSO inputs and outputs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henniggroup/symbolic-regression-utilities
project_urls =
    Bug Tracker = https://github.com/henniggroup/symbolic-regression-utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools>=30.3.0
    wheel
install_requires =
    pint>=0.16.1
    sympy>=1.7
    pandas>=1.1.5
tests_require =
    pytest>=6.0.0
[options.packages.find]
where = src
